# aioworkers-boto

./: .scaraplate.conf  README.md  README.rst  pyproject.toml
.github/workflows/: tests.yml  upload.yml
aioworkers_boto/: __about__.py  storage.py
tests/: test_core.py  test_storage.py
